# mandelbrot_sdl

./: CMakeLists.txt  README.md  main.c  mandelbrot.c  mandelbrot.h
